--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-pandas
-openpyxl
+mccabe==0.7.0
+mypy==0.982
+mypy-extensions==0.4.3
+polars==0.14.18
+pycodestyle==2.9.1
+pydocstyle==6.1.1
+pyflakes==2.5.0
+pylama==8.4.1
+snowballstemmer==2.2.0
+tomli==2.0.1
+typing-extensions==4.4.0
+xlsx2csv==0.8.0
